--- a/proyecto integrador 2semestre/inicio pagina web/css/styleIndex.css
+++ b/proyecto integrador 2semestre/inicio pagina web/css/styleIndex.css
@@ -198,7 +198,7 @@
 
 .slides {
   display: flex;
-  transition: transform 0.5s ease-in-out;
+  transition: transform 0.5s linear;
   width: 100%;
 }
 
@@ -350,7 +350,21 @@ main{
   box-shadow: 0 2px 5px green;
   margin-top: 20px;
 }
-  
+
+.cerrarSesion {
+    background-color: green;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+span#nombreUsuario {
+    font-weight: bold;
+    color: black;
+    margin-right: 10px;
+} 
 
   
   
